version/0.38/_sources/api/solver/_autosummary/settings/locations_5.rst.txt
:orphan:

.. _locations_5:

locations
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.locations_5
    :show-inheritance:

.. rubric:: Attributes

=============================   =====================

Attribute                                     Summary

=============================   =====================
:ref:`physics <physics_3>`           'physics' child.

:ref:`geometry <geometry_11>`       'geometry' child.

:ref:`surfaces <surfaces_8>`        'surfaces' child.

=============================   =====================

.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`mesh_1_child <mesh_1_child>`                                    'child_object_type' of mesh.

:ref:`surface_1_child <surface_1_child>`                           'child_object_type' of surface.

:ref:`volume_3_child <volume_3_child>`                              'child_object_type' of volume.

:ref:`force_child <force_child>`                                     'child_object_type' of force.

:ref:`lift_child <lift_child>`                                        'child_object_type' of lift.

:ref:`drag_child <drag_child>`                                        'child_object_type' of drag.

:ref:`moment_child <moment_child>`                                  'child_object_type' of moment.

:ref:`flux_1_child <flux_1_child>`                                    'child_object_type' of flux.

:ref:`injection_2_child <injection_2_child>`                     'child_object_type' of injection.

:ref:`boundary_4 <boundary_4>`                                                   'boundary' child.

:ref:`yplus_star <yplus_star>`                                                 'yplus_star' child.

:ref:`yplus_ystar_1 <yplus_ystar_1>`                                          'yplus_ystar' child.

:ref:`mesh_2_child <mesh_2_child>`                                    'child_object_type' of mesh.

:ref:`contour_child <contour_child>`                               'child_object_type' of contour.

:ref:`vector_1_child <vector_1_child>`                              'child_object_type' of vector.

:ref:`lic_child <lic_child>`                                           'child_object_type' of lic.

:ref:`olic_child <olic_child>`                                        'child_object_type' of olic.

:ref:`xy_plot_child <xy_plot_child>`                               'child_object_type' of xy_plot.

:ref:`cumulative_plot_child <cumulative_plot_child>`       'child_object_type' of cumulative_plot.

====================================================   ===========================================

